--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
     "material-design-icons-iconfont": "^5.0.1",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
@@ -23,10 +23,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11",
     "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.0"
-
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
